--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  margin-top: 24px;
+  display: flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 16px;
+}
+
+.value {
+  display: block;
+  font-size: 40px;
+  line-height: 24px;
+}
+
+.label {
+  text-transform: uppercase;
+}
